--- a/flash-provider-8001/pom.xml
+++ b/flash-provider-8001/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>flash-web</artifactId>
+    <artifactId>flash-provider-8001</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
