--- a/flash-consumer-feign/src/main/resources/application.yml
+++ b/flash-consumer-feign/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 server:
   port: 80
 
-rest:
-  url:
-    prefix: http://FLASH-PROVIDER
-
 eureka:
   client:
     # 不注册到Eureka的注册中心
@@ -12,3 +8,7 @@ eureka:
     service-url:
       # 配置注册中心地址
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka,http://eureka7003.com:7003/eureka
+
+feign:
+  hystrix:
+    enabled: true
