--- a/flash-dao/pom.xml
+++ b/flash-dao/pom.xml
@@ -15,14 +15,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.10.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.10.1</version>
+            <groupId>com.flash</groupId>
+            <artifactId>flash-common</artifactId>
         </dependency>
 
         <dependency>
