--- a/flash-provider-8001/pom.xml
+++ b/flash-provider-8001/pom.xml
@@ -78,5 +78,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
