--- a/flash-eureka-7001/pom.xml
+++ b/flash-eureka-7001/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
 
+        <!-- 热部署工具 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
