--- a/flash-provider-8003/src/main/resources/application.yml
+++ b/flash-provider-8003/src/main/resources/application.yml
@@ -70,7 +70,7 @@ mybatis-plus:
   #MyBaits 别名包扫描路径，通过该属性可以给包中的类注册别名，
   #注册后在 Mapper 对应的 XML 文件中可以直接使用类名，而不用使用全限定的类名
   #(即 XML 中调用的时候不用包含包名)
-  type-aliases-package: com.flash.common.entity
+  #type-aliases-package: com.flash.common.entity
 
 logging:
   level:
